// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collectNodes > basic1 1`] = `
[
  {
    "position": {
      "end": {
        "column": 10,
        "line": 5,
        "offset": 36,
      },
      "start": {
        "column": 7,
        "line": 5,
        "offset": 33,
      },
    },
    "type": "text",
    "value": "将进酒",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 7,
        "offset": 60,
      },
      "start": {
        "column": 3,
        "line": 7,
        "offset": 41,
      },
    },
    "type": "text",
    "value": "君不见黄河之水天上来，奔流到海不复回。",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 8,
        "offset": 83,
      },
      "start": {
        "column": 23,
        "line": 7,
        "offset": 61,
      },
    },
    "type": "text",
    "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 9,
        "offset": 103,
      },
      "start": {
        "column": 23,
        "line": 8,
        "offset": 84,
      },
    },
    "type": "text",
    "value": "
人生得意须尽欢，莫使金樽空对月。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 10,
        "offset": 123,
      },
      "start": {
        "column": 20,
        "line": 9,
        "offset": 104,
      },
    },
    "type": "text",
    "value": "
天生我材必有用，千金散尽还复来。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 11,
        "offset": 143,
      },
      "start": {
        "column": 20,
        "line": 10,
        "offset": 124,
      },
    },
    "type": "text",
    "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 12,
        "offset": 163,
      },
      "start": {
        "column": 20,
        "line": 11,
        "offset": 144,
      },
    },
    "type": "text",
    "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
  },
  {
    "position": {
      "end": {
        "column": 17,
        "line": 13,
        "offset": 181,
      },
      "start": {
        "column": 20,
        "line": 12,
        "offset": 164,
      },
    },
    "type": "text",
    "value": "
与君歌一曲，请君为我倾耳听。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 14,
        "offset": 201,
      },
      "start": {
        "column": 18,
        "line": 13,
        "offset": 182,
      },
    },
    "type": "text",
    "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 15,
        "offset": 221,
      },
      "start": {
        "column": 20,
        "line": 14,
        "offset": 202,
      },
    },
    "type": "text",
    "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 16,
        "offset": 241,
      },
      "start": {
        "column": 20,
        "line": 15,
        "offset": 222,
      },
    },
    "type": "text",
    "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 17,
        "offset": 261,
      },
      "start": {
        "column": 20,
        "line": 16,
        "offset": 242,
      },
    },
    "type": "text",
    "value": "
主人何为言少钱，径须沽取对君酌。",
  },
  {
    "position": {
      "end": {
        "column": 27,
        "line": 18,
        "offset": 289,
      },
      "start": {
        "column": 20,
        "line": 17,
        "offset": 262,
      },
    },
    "type": "text",
    "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 24,
        "offset": 318,
      },
      "start": {
        "column": 1,
        "line": 24,
        "offset": 308,
      },
    },
    "type": "text",
    "value": "emphasis: ",
  },
  {
    "position": {
      "end": {
        "column": 18,
        "line": 24,
        "offset": 325,
      },
      "start": {
        "column": 13,
        "line": 24,
        "offset": 320,
      },
    },
    "type": "text",
    "value": "foo "",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 24,
        "offset": 329,
      },
      "start": {
        "column": 19,
        "line": 24,
        "offset": 326,
      },
    },
    "type": "text",
    "value": "bar",
  },
  {
    "position": {
      "end": {
        "column": 28,
        "line": 24,
        "offset": 335,
      },
      "start": {
        "column": 23,
        "line": 24,
        "offset": 330,
      },
    },
    "type": "text",
    "value": "" foo",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 26,
        "offset": 360,
      },
      "start": {
        "column": 1,
        "line": 26,
        "offset": 339,
      },
    },
    "type": "text",
    "value": "autolink(extension): ",
  },
  {
    "position": {
      "end": {
        "column": 40,
        "line": 26,
        "offset": 378,
      },
      "start": {
        "column": 22,
        "line": 26,
        "offset": 360,
      },
    },
    "type": "text",
    "value": "http://example.com",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 28,
        "offset": 390,
      },
      "start": {
        "column": 1,
        "line": 28,
        "offset": 380,
      },
    },
    "type": "text",
    "value": "autolink: ",
  },
  {
    "position": {
      "end": {
        "column": 31,
        "line": 28,
        "offset": 410,
      },
      "start": {
        "column": 12,
        "line": 28,
        "offset": 391,
      },
    },
    "type": "text",
    "value": "foo@bar.example.com",
  },
  {
    "position": {
      "end": {
        "column": 16,
        "line": 30,
        "offset": 428,
      },
      "start": {
        "column": 1,
        "line": 30,
        "offset": 413,
      },
    },
    "type": "text",
    "value": "Setext headings",
  },
  {
    "position": {
      "end": {
        "column": 29,
        "line": 33,
        "offset": 468,
      },
      "start": {
        "column": 1,
        "line": 33,
        "offset": 440,
      },
    },
    "type": "text",
    "value": "Task List Items (extension):",
  },
  {
    "position": {
      "end": {
        "column": 10,
        "line": 35,
        "offset": 479,
      },
      "start": {
        "column": 7,
        "line": 35,
        "offset": 476,
      },
    },
    "type": "text",
    "value": "foo",
  },
  {
    "position": {
      "end": {
        "column": 12,
        "line": 36,
        "offset": 491,
      },
      "start": {
        "column": 9,
        "line": 36,
        "offset": 488,
      },
    },
    "type": "text",
    "value": "bar",
  },
  {
    "position": {
      "end": {
        "column": 12,
        "line": 37,
        "offset": 503,
      },
      "start": {
        "column": 9,
        "line": 37,
        "offset": 500,
      },
    },
    "type": "text",
    "value": "baz",
  },
  {
    "position": {
      "end": {
        "column": 10,
        "line": 38,
        "offset": 513,
      },
      "start": {
        "column": 7,
        "line": 38,
        "offset": 510,
      },
    },
    "type": "text",
    "value": "bim",
  },
  {
    "position": {
      "end": {
        "column": 23,
        "line": 40,
        "offset": 537,
      },
      "start": {
        "column": 3,
        "line": 40,
        "offset": 517,
      },
    },
    "type": "text",
    "value": "This is a blockquote",
  },
  {
    "position": {
      "end": {
        "column": 23,
        "line": 42,
        "offset": 562,
      },
      "start": {
        "column": 3,
        "line": 42,
        "offset": 542,
      },
    },
    "type": "text",
    "value": "with multiple lines.",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 51,
        "offset": 711,
      },
      "start": {
        "column": 1,
        "line": 51,
        "offset": 690,
      },
    },
    "type": "text",
    "value": "This is a math block:",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 57,
        "offset": 855,
      },
      "start": {
        "column": 3,
        "line": 57,
        "offset": 847,
      },
    },
    "type": "text",
    "value": "heading1",
  },
  {
    "position": {
      "end": {
        "column": 12,
        "line": 58,
        "offset": 867,
      },
      "start": {
        "column": 4,
        "line": 58,
        "offset": 859,
      },
    },
    "type": "text",
    "value": "heading2",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 59,
        "offset": 880,
      },
      "start": {
        "column": 5,
        "line": 59,
        "offset": 872,
      },
    },
    "type": "text",
    "value": "heading3",
  },
  {
    "position": {
      "end": {
        "column": 14,
        "line": 60,
        "offset": 894,
      },
      "start": {
        "column": 6,
        "line": 60,
        "offset": 886,
      },
    },
    "type": "text",
    "value": "heading4",
  },
  {
    "position": {
      "end": {
        "column": 15,
        "line": 61,
        "offset": 909,
      },
      "start": {
        "column": 7,
        "line": 61,
        "offset": 901,
      },
    },
    "type": "text",
    "value": "heading5",
  },
  {
    "position": {
      "end": {
        "column": 16,
        "line": 62,
        "offset": 925,
      },
      "start": {
        "column": 8,
        "line": 62,
        "offset": 917,
      },
    },
    "type": "text",
    "value": "heading6",
  },
  {
    "position": {
      "end": {
        "column": 20,
        "line": 66,
        "offset": 951,
      },
      "start": {
        "column": 1,
        "line": 66,
        "offset": 932,
      },
    },
    "type": "text",
    "value": "This is a footnote ",
  },
  {
    "position": {
      "end": {
        "column": 35,
        "line": 66,
        "offset": 966,
      },
      "start": {
        "column": 22,
        "line": 66,
        "offset": 953,
      },
    },
    "type": "text",
    "value": "something....",
  },
  {
    "position": {
      "end": {
        "column": 37,
        "line": 66,
        "offset": 968,
      },
      "start": {
        "column": 36,
        "line": 66,
        "offset": 967,
      },
    },
    "type": "text",
    "value": ".",
  },
  {
    "position": {
      "end": {
        "column": 41,
        "line": 68,
        "offset": 1010,
      },
      "start": {
        "column": 11,
        "line": 68,
        "offset": 980,
      },
    },
    "type": "text",
    "value": "This is a footnote definition.",
  },
  {
    "position": {
      "end": {
        "column": 30,
        "line": 70,
        "offset": 1041,
      },
      "start": {
        "column": 1,
        "line": 70,
        "offset": 1012,
      },
    },
    "type": "text",
    "value": "This is a footnote reference ",
  },
  {
    "position": {
      "end": {
        "column": 25,
        "line": 72,
        "offset": 1075,
      },
      "start": {
        "column": 1,
        "line": 72,
        "offset": 1051,
      },
    },
    "type": "text",
    "value": "The mass-energy equation",
  },
  {
    "position": {
      "end": {
        "column": 41,
        "line": 72,
        "offset": 1091,
      },
      "start": {
        "column": 29,
        "line": 72,
        "offset": 1079,
      },
    },
    "type": "text",
    "value": " is awesome!",
  },
  {
    "position": {
      "end": {
        "column": 45,
        "line": 76,
        "offset": 1165,
      },
      "start": {
        "column": 5,
        "line": 76,
        "offset": 1125,
      },
    },
    "type": "text",
    "value": "The nested footnote is absolutely cool! ",
  },
  {
    "position": {
      "end": {
        "column": 78,
        "line": 76,
        "offset": 1198,
      },
      "start": {
        "column": 47,
        "line": 76,
        "offset": 1167,
      },
    },
    "type": "text",
    "value": "a nested footnote with formula ",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 80,
        "offset": 1229,
      },
      "start": {
        "column": 1,
        "line": 80,
        "offset": 1217,
      },
    },
    "type": "text",
    "value": "Definitions:",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 87,
        "offset": 1342,
      },
      "start": {
        "column": 2,
        "line": 87,
        "offset": 1338,
      },
    },
    "type": "text",
    "value": "logo",
  },
  {
    "position": {
      "end": {
        "column": 16,
        "line": 87,
        "offset": 1352,
      },
      "start": {
        "column": 13,
        "line": 87,
        "offset": 1349,
      },
    },
    "type": "text",
    "value": "baz",
  },
  {
    "position": {
      "end": {
        "column": 18,
        "line": 87,
        "offset": 1354,
      },
      "start": {
        "column": 17,
        "line": 87,
        "offset": 1353,
      },
    },
    "type": "text",
    "value": "
",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 88,
        "offset": 1359,
      },
      "start": {
        "column": 2,
        "line": 88,
        "offset": 1355,
      },
    },
    "type": "text",
    "value": "logo",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 88,
        "offset": 1361,
      },
      "start": {
        "column": 7,
        "line": 88,
        "offset": 1360,
      },
    },
    "type": "text",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 12,
        "line": 88,
        "offset": 1365,
      },
      "start": {
        "column": 9,
        "line": 88,
        "offset": 1362,
      },
    },
    "type": "text",
    "value": "bar",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 88,
        "offset": 1372,
      },
      "start": {
        "column": 18,
        "line": 88,
        "offset": 1371,
      },
    },
    "type": "text",
    "value": "
",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 89,
        "offset": 1377,
      },
      "start": {
        "column": 2,
        "line": 89,
        "offset": 1373,
      },
    },
    "type": "text",
    "value": "logo",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 93,
        "offset": 1405,
      },
      "start": {
        "column": 2,
        "line": 93,
        "offset": 1394,
      },
    },
    "type": "text",
    "value": "Guanghechen",
  },
  {
    "position": {
      "end": {
        "column": 88,
        "line": 93,
        "offset": 1480,
      },
      "start": {
        "column": 63,
        "line": 93,
        "offset": 1455,
      },
    },
    "type": "text",
    "value": " is the author of yozora.",
  },
]
`;

exports[`collectNodes > basic1 2`] = `
[
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 22,
            "line": 7,
            "offset": 60,
          },
          "start": {
            "column": 3,
            "line": 7,
            "offset": 41,
          },
        },
        "type": "text",
        "value": "君不见黄河之水天上来，奔流到海不复回。",
      },
      {
        "position": {
          "end": {
            "column": 23,
            "line": 7,
            "offset": 61,
          },
          "start": {
            "column": 22,
            "line": 7,
            "offset": 60,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 22,
            "line": 8,
            "offset": 83,
          },
          "start": {
            "column": 23,
            "line": 7,
            "offset": 61,
          },
        },
        "type": "text",
        "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
      },
      {
        "position": {
          "end": {
            "column": 23,
            "line": 8,
            "offset": 84,
          },
          "start": {
            "column": 22,
            "line": 8,
            "offset": 83,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 9,
            "offset": 103,
          },
          "start": {
            "column": 23,
            "line": 8,
            "offset": 84,
          },
        },
        "type": "text",
        "value": "
人生得意须尽欢，莫使金樽空对月。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 9,
            "offset": 104,
          },
          "start": {
            "column": 19,
            "line": 9,
            "offset": 103,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 10,
            "offset": 123,
          },
          "start": {
            "column": 20,
            "line": 9,
            "offset": 104,
          },
        },
        "type": "text",
        "value": "
天生我材必有用，千金散尽还复来。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 10,
            "offset": 124,
          },
          "start": {
            "column": 19,
            "line": 10,
            "offset": 123,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 11,
            "offset": 143,
          },
          "start": {
            "column": 20,
            "line": 10,
            "offset": 124,
          },
        },
        "type": "text",
        "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 11,
            "offset": 144,
          },
          "start": {
            "column": 19,
            "line": 11,
            "offset": 143,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 12,
            "offset": 163,
          },
          "start": {
            "column": 20,
            "line": 11,
            "offset": 144,
          },
        },
        "type": "text",
        "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 12,
            "offset": 164,
          },
          "start": {
            "column": 19,
            "line": 12,
            "offset": 163,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 17,
            "line": 13,
            "offset": 181,
          },
          "start": {
            "column": 20,
            "line": 12,
            "offset": 164,
          },
        },
        "type": "text",
        "value": "
与君歌一曲，请君为我倾耳听。",
      },
      {
        "position": {
          "end": {
            "column": 18,
            "line": 13,
            "offset": 182,
          },
          "start": {
            "column": 17,
            "line": 13,
            "offset": 181,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 14,
            "offset": 201,
          },
          "start": {
            "column": 18,
            "line": 13,
            "offset": 182,
          },
        },
        "type": "text",
        "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 14,
            "offset": 202,
          },
          "start": {
            "column": 19,
            "line": 14,
            "offset": 201,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 15,
            "offset": 221,
          },
          "start": {
            "column": 20,
            "line": 14,
            "offset": 202,
          },
        },
        "type": "text",
        "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 15,
            "offset": 222,
          },
          "start": {
            "column": 19,
            "line": 15,
            "offset": 221,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 16,
            "offset": 241,
          },
          "start": {
            "column": 20,
            "line": 15,
            "offset": 222,
          },
        },
        "type": "text",
        "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 16,
            "offset": 242,
          },
          "start": {
            "column": 19,
            "line": 16,
            "offset": 241,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 17,
            "offset": 261,
          },
          "start": {
            "column": 20,
            "line": 16,
            "offset": 242,
          },
        },
        "type": "text",
        "value": "
主人何为言少钱，径须沽取对君酌。",
      },
      {
        "position": {
          "end": {
            "column": 20,
            "line": 17,
            "offset": 262,
          },
          "start": {
            "column": 19,
            "line": 17,
            "offset": 261,
          },
        },
        "type": "break",
      },
      {
        "position": {
          "end": {
            "column": 27,
            "line": 18,
            "offset": 289,
          },
          "start": {
            "column": 20,
            "line": 17,
            "offset": 262,
          },
        },
        "type": "text",
        "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
      },
    ],
    "position": {
      "end": {
        "column": 28,
        "line": 18,
        "offset": 290,
      },
      "start": {
        "column": 3,
        "line": 7,
        "offset": 41,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "logo",
        "identifier": "logo",
        "label": "logo",
        "position": {
          "end": {
            "column": 10,
            "line": 21,
            "offset": 302,
          },
          "start": {
            "column": 1,
            "line": 21,
            "offset": 293,
          },
        },
        "referenceType": "collapsed",
        "type": "imageReference",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 21,
        "offset": 303,
      },
      "start": {
        "column": 1,
        "line": 21,
        "offset": 293,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 11,
            "line": 24,
            "offset": 318,
          },
          "start": {
            "column": 1,
            "line": 24,
            "offset": 308,
          },
        },
        "type": "text",
        "value": "emphasis: ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 18,
                "line": 24,
                "offset": 325,
              },
              "start": {
                "column": 13,
                "line": 24,
                "offset": 320,
              },
            },
            "type": "text",
            "value": "foo "",
          },
          {
            "children": [
              {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 24,
                    "offset": 329,
                  },
                  "start": {
                    "column": 19,
                    "line": 24,
                    "offset": 326,
                  },
                },
                "type": "text",
                "value": "bar",
              },
            ],
            "position": {
              "end": {
                "column": 23,
                "line": 24,
                "offset": 330,
              },
              "start": {
                "column": 18,
                "line": 24,
                "offset": 325,
              },
            },
            "type": "emphasis",
          },
          {
            "position": {
              "end": {
                "column": 28,
                "line": 24,
                "offset": 335,
              },
              "start": {
                "column": 23,
                "line": 24,
                "offset": 330,
              },
            },
            "type": "text",
            "value": "" foo",
          },
        ],
        "position": {
          "end": {
            "column": 30,
            "line": 24,
            "offset": 337,
          },
          "start": {
            "column": 11,
            "line": 24,
            "offset": 318,
          },
        },
        "type": "strong",
      },
    ],
    "position": {
      "end": {
        "column": 31,
        "line": 24,
        "offset": 338,
      },
      "start": {
        "column": 1,
        "line": 24,
        "offset": 308,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 22,
            "line": 26,
            "offset": 360,
          },
          "start": {
            "column": 1,
            "line": 26,
            "offset": 339,
          },
        },
        "type": "text",
        "value": "autolink(extension): ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 40,
                "line": 26,
                "offset": 378,
              },
              "start": {
                "column": 22,
                "line": 26,
                "offset": 360,
              },
            },
            "type": "text",
            "value": "http://example.com",
          },
        ],
        "position": {
          "end": {
            "column": 40,
            "line": 26,
            "offset": 378,
          },
          "start": {
            "column": 22,
            "line": 26,
            "offset": 360,
          },
        },
        "type": "link",
        "url": "http://example.com",
      },
    ],
    "position": {
      "end": {
        "column": 41,
        "line": 26,
        "offset": 379,
      },
      "start": {
        "column": 1,
        "line": 26,
        "offset": 339,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 11,
            "line": 28,
            "offset": 390,
          },
          "start": {
            "column": 1,
            "line": 28,
            "offset": 380,
          },
        },
        "type": "text",
        "value": "autolink: ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 31,
                "line": 28,
                "offset": 410,
              },
              "start": {
                "column": 12,
                "line": 28,
                "offset": 391,
              },
            },
            "type": "text",
            "value": "foo@bar.example.com",
          },
        ],
        "position": {
          "end": {
            "column": 32,
            "line": 28,
            "offset": 411,
          },
          "start": {
            "column": 11,
            "line": 28,
            "offset": 390,
          },
        },
        "type": "link",
        "url": "mailto:foo@bar.example.com",
      },
    ],
    "position": {
      "end": {
        "column": 33,
        "line": 28,
        "offset": 412,
      },
      "start": {
        "column": 1,
        "line": 28,
        "offset": 380,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 29,
            "line": 33,
            "offset": 468,
          },
          "start": {
            "column": 1,
            "line": 33,
            "offset": 440,
          },
        },
        "type": "text",
        "value": "Task List Items (extension):",
      },
    ],
    "position": {
      "end": {
        "column": 30,
        "line": 33,
        "offset": 469,
      },
      "start": {
        "column": 1,
        "line": 33,
        "offset": 440,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 10,
                "line": 35,
                "offset": 479,
              },
              "start": {
                "column": 7,
                "line": 35,
                "offset": 476,
              },
            },
            "type": "text",
            "value": "foo",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "position": {
                      "end": {
                        "column": 12,
                        "line": 36,
                        "offset": 491,
                      },
                      "start": {
                        "column": 9,
                        "line": 36,
                        "offset": 488,
                      },
                    },
                    "type": "text",
                    "value": "bar",
                  },
                ],
                "position": {
                  "end": {
                    "column": 13,
                    "line": 36,
                    "offset": 492,
                  },
                  "start": {
                    "column": 3,
                    "line": 36,
                    "offset": 482,
                  },
                },
                "status": "doing",
                "type": "listItem",
              },
              {
                "children": [
                  {
                    "position": {
                      "end": {
                        "column": 12,
                        "line": 37,
                        "offset": 503,
                      },
                      "start": {
                        "column": 9,
                        "line": 37,
                        "offset": 500,
                      },
                    },
                    "type": "text",
                    "value": "baz",
                  },
                ],
                "position": {
                  "end": {
                    "column": 13,
                    "line": 37,
                    "offset": 504,
                  },
                  "start": {
                    "column": 3,
                    "line": 37,
                    "offset": 494,
                  },
                },
                "status": "done",
                "type": "listItem",
              },
            ],
            "marker": 45,
            "ordered": false,
            "position": {
              "end": {
                "column": 13,
                "line": 37,
                "offset": 504,
              },
              "start": {
                "column": 3,
                "line": 36,
                "offset": 482,
              },
            },
            "spread": false,
            "type": "list",
          },
        ],
        "position": {
          "end": {
            "column": 13,
            "line": 37,
            "offset": 504,
          },
          "start": {
            "column": 1,
            "line": 35,
            "offset": 470,
          },
        },
        "status": "done",
        "type": "listItem",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 10,
                "line": 38,
                "offset": 513,
              },
              "start": {
                "column": 7,
                "line": 38,
                "offset": 510,
              },
            },
            "type": "text",
            "value": "bim",
          },
        ],
        "position": {
          "end": {
            "column": 11,
            "line": 38,
            "offset": 514,
          },
          "start": {
            "column": 1,
            "line": 38,
            "offset": 504,
          },
        },
        "status": "todo",
        "type": "listItem",
      },
    ],
    "marker": 45,
    "ordered": false,
    "position": {
      "end": {
        "column": 11,
        "line": 38,
        "offset": 514,
      },
      "start": {
        "column": 1,
        "line": 35,
        "offset": 470,
      },
    },
    "spread": false,
    "type": "list",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 23,
            "line": 40,
            "offset": 537,
          },
          "start": {
            "column": 3,
            "line": 40,
            "offset": 517,
          },
        },
        "type": "text",
        "value": "This is a blockquote",
      },
    ],
    "position": {
      "end": {
        "column": 24,
        "line": 40,
        "offset": 538,
      },
      "start": {
        "column": 3,
        "line": 40,
        "offset": 517,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 23,
            "line": 42,
            "offset": 562,
          },
          "start": {
            "column": 3,
            "line": 42,
            "offset": 542,
          },
        },
        "type": "text",
        "value": "with multiple lines.",
      },
    ],
    "position": {
      "end": {
        "column": 24,
        "line": 42,
        "offset": 563,
      },
      "start": {
        "column": 3,
        "line": 42,
        "offset": 542,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 22,
            "line": 51,
            "offset": 711,
          },
          "start": {
            "column": 1,
            "line": 51,
            "offset": 690,
          },
        },
        "type": "text",
        "value": "This is a math block:",
      },
    ],
    "position": {
      "end": {
        "column": 23,
        "line": 51,
        "offset": 712,
      },
      "start": {
        "column": 1,
        "line": 51,
        "offset": 690,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 20,
            "line": 66,
            "offset": 951,
          },
          "start": {
            "column": 1,
            "line": 66,
            "offset": 932,
          },
        },
        "type": "text",
        "value": "This is a footnote ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 35,
                "line": 66,
                "offset": 966,
              },
              "start": {
                "column": 22,
                "line": 66,
                "offset": 953,
              },
            },
            "type": "text",
            "value": "something....",
          },
        ],
        "position": {
          "end": {
            "column": 36,
            "line": 66,
            "offset": 967,
          },
          "start": {
            "column": 20,
            "line": 66,
            "offset": 951,
          },
        },
        "type": "footnote",
      },
      {
        "position": {
          "end": {
            "column": 37,
            "line": 66,
            "offset": 968,
          },
          "start": {
            "column": 36,
            "line": 66,
            "offset": 967,
          },
        },
        "type": "text",
        "value": ".",
      },
    ],
    "position": {
      "end": {
        "column": 38,
        "line": 66,
        "offset": 969,
      },
      "start": {
        "column": 1,
        "line": 66,
        "offset": 932,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 41,
            "line": 68,
            "offset": 1010,
          },
          "start": {
            "column": 11,
            "line": 68,
            "offset": 980,
          },
        },
        "type": "text",
        "value": "This is a footnote definition.",
      },
    ],
    "position": {
      "end": {
        "column": 42,
        "line": 68,
        "offset": 1011,
      },
      "start": {
        "column": 10,
        "line": 68,
        "offset": 979,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 30,
            "line": 70,
            "offset": 1041,
          },
          "start": {
            "column": 1,
            "line": 70,
            "offset": 1012,
          },
        },
        "type": "text",
        "value": "This is a footnote reference ",
      },
      {
        "identifier": "foo-2",
        "label": "foo-2",
        "position": {
          "end": {
            "column": 38,
            "line": 70,
            "offset": 1049,
          },
          "start": {
            "column": 30,
            "line": 70,
            "offset": 1041,
          },
        },
        "type": "footnoteReference",
      },
    ],
    "position": {
      "end": {
        "column": 39,
        "line": 70,
        "offset": 1050,
      },
      "start": {
        "column": 1,
        "line": 70,
        "offset": 1012,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 25,
            "line": 72,
            "offset": 1075,
          },
          "start": {
            "column": 1,
            "line": 72,
            "offset": 1051,
          },
        },
        "type": "text",
        "value": "The mass-energy equation",
      },
      {
        "identifier": "1",
        "label": "1",
        "position": {
          "end": {
            "column": 29,
            "line": 72,
            "offset": 1079,
          },
          "start": {
            "column": 25,
            "line": 72,
            "offset": 1075,
          },
        },
        "type": "footnoteReference",
      },
      {
        "position": {
          "end": {
            "column": 41,
            "line": 72,
            "offset": 1091,
          },
          "start": {
            "column": 29,
            "line": 72,
            "offset": 1079,
          },
        },
        "type": "text",
        "value": " is awesome!",
      },
    ],
    "position": {
      "end": {
        "column": 42,
        "line": 72,
        "offset": 1092,
      },
      "start": {
        "column": 1,
        "line": 72,
        "offset": 1051,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 45,
            "line": 76,
            "offset": 1165,
          },
          "start": {
            "column": 5,
            "line": 76,
            "offset": 1125,
          },
        },
        "type": "text",
        "value": "The nested footnote is absolutely cool! ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 78,
                "line": 76,
                "offset": 1198,
              },
              "start": {
                "column": 47,
                "line": 76,
                "offset": 1167,
              },
            },
            "type": "text",
            "value": "a nested footnote with formula ",
          },
          {
            "position": {
              "end": {
                "column": 89,
                "line": 76,
                "offset": 1209,
              },
              "start": {
                "column": 78,
                "line": 76,
                "offset": 1198,
              },
            },
            "type": "inlineMath",
            "value": "x^2+y^2=1",
          },
        ],
        "position": {
          "end": {
            "column": 90,
            "line": 76,
            "offset": 1210,
          },
          "start": {
            "column": 45,
            "line": 76,
            "offset": 1165,
          },
        },
        "type": "footnote",
      },
    ],
    "position": {
      "end": {
        "column": 91,
        "line": 76,
        "offset": 1211,
      },
      "start": {
        "column": 5,
        "line": 76,
        "offset": 1125,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "position": {
          "end": {
            "column": 13,
            "line": 80,
            "offset": 1229,
          },
          "start": {
            "column": 1,
            "line": 80,
            "offset": 1217,
          },
        },
        "type": "text",
        "value": "Definitions:",
      },
    ],
    "position": {
      "end": {
        "column": 14,
        "line": 80,
        "offset": 1230,
      },
      "start": {
        "column": 1,
        "line": 80,
        "offset": 1217,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 87,
                "offset": 1342,
              },
              "start": {
                "column": 2,
                "line": 87,
                "offset": 1338,
              },
            },
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "bar",
        "label": "bar",
        "position": {
          "end": {
            "column": 12,
            "line": 87,
            "offset": 1348,
          },
          "start": {
            "column": 1,
            "line": 87,
            "offset": 1337,
          },
        },
        "referenceType": "full",
        "type": "linkReference",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 16,
                "line": 87,
                "offset": 1352,
              },
              "start": {
                "column": 13,
                "line": 87,
                "offset": 1349,
              },
            },
            "type": "text",
            "value": "baz",
          },
        ],
        "identifier": "baz",
        "label": "baz",
        "position": {
          "end": {
            "column": 17,
            "line": 87,
            "offset": 1353,
          },
          "start": {
            "column": 12,
            "line": 87,
            "offset": 1348,
          },
        },
        "referenceType": "shortcut",
        "type": "linkReference",
      },
      {
        "position": {
          "end": {
            "column": 18,
            "line": 87,
            "offset": 1354,
          },
          "start": {
            "column": 17,
            "line": 87,
            "offset": 1353,
          },
        },
        "type": "text",
        "value": "
",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 88,
                "offset": 1359,
              },
              "start": {
                "column": 2,
                "line": 88,
                "offset": 1355,
              },
            },
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "logo",
        "label": "logo",
        "position": {
          "end": {
            "column": 7,
            "line": 88,
            "offset": 1360,
          },
          "start": {
            "column": 1,
            "line": 88,
            "offset": 1354,
          },
        },
        "referenceType": "shortcut",
        "type": "linkReference",
      },
      {
        "position": {
          "end": {
            "column": 8,
            "line": 88,
            "offset": 1361,
          },
          "start": {
            "column": 7,
            "line": 88,
            "offset": 1360,
          },
        },
        "type": "text",
        "value": " ",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 12,
                "line": 88,
                "offset": 1365,
              },
              "start": {
                "column": 9,
                "line": 88,
                "offset": 1362,
              },
            },
            "type": "text",
            "value": "bar",
          },
        ],
        "identifier": "baz",
        "label": "baz",
        "position": {
          "end": {
            "column": 18,
            "line": 88,
            "offset": 1371,
          },
          "start": {
            "column": 8,
            "line": 88,
            "offset": 1361,
          },
        },
        "referenceType": "full",
        "type": "linkReference",
      },
      {
        "position": {
          "end": {
            "column": 19,
            "line": 88,
            "offset": 1372,
          },
          "start": {
            "column": 18,
            "line": 88,
            "offset": 1371,
          },
        },
        "type": "text",
        "value": "
",
      },
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 89,
                "offset": 1377,
              },
              "start": {
                "column": 2,
                "line": 89,
                "offset": 1373,
              },
            },
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "logo",
        "label": "logo",
        "position": {
          "end": {
            "column": 9,
            "line": 89,
            "offset": 1380,
          },
          "start": {
            "column": 1,
            "line": 89,
            "offset": 1372,
          },
        },
        "referenceType": "collapsed",
        "type": "linkReference",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 89,
        "offset": 1381,
      },
      "start": {
        "column": 1,
        "line": 87,
        "offset": 1337,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "logo",
        "identifier": "logo",
        "label": "logo",
        "position": {
          "end": {
            "column": 10,
            "line": 91,
            "offset": 1391,
          },
          "start": {
            "column": 1,
            "line": 91,
            "offset": 1382,
          },
        },
        "referenceType": "collapsed",
        "type": "imageReference",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 91,
        "offset": 1392,
      },
      "start": {
        "column": 1,
        "line": 91,
        "offset": 1382,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 13,
                "line": 93,
                "offset": 1405,
              },
              "start": {
                "column": 2,
                "line": 93,
                "offset": 1394,
              },
            },
            "type": "text",
            "value": "Guanghechen",
          },
        ],
        "position": {
          "end": {
            "column": 63,
            "line": 93,
            "offset": 1455,
          },
          "start": {
            "column": 1,
            "line": 93,
            "offset": 1393,
          },
        },
        "title": "this is a link",
        "type": "link",
        "url": "https://github.com/guanghechen",
      },
      {
        "position": {
          "end": {
            "column": 88,
            "line": 93,
            "offset": 1480,
          },
          "start": {
            "column": 63,
            "line": 93,
            "offset": 1455,
          },
        },
        "type": "text",
        "value": " is the author of yozora.",
      },
    ],
    "position": {
      "end": {
        "column": 89,
        "line": 93,
        "offset": 1481,
      },
      "start": {
        "column": 1,
        "line": 93,
        "offset": 1393,
      },
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "foo",
        "position": {
          "end": {
            "column": 75,
            "line": 95,
            "offset": 1556,
          },
          "start": {
            "column": 1,
            "line": 95,
            "offset": 1482,
          },
        },
        "title": "guanghechen",
        "type": "image",
        "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
      },
    ],
    "position": {
      "end": {
        "column": 76,
        "line": 95,
        "offset": 1557,
      },
      "start": {
        "column": 1,
        "line": 95,
        "offset": 1482,
      },
    },
    "type": "paragraph",
  },
]
`;
